# ipfs-relay

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ipfs-upload-relay-spec.md
.github/workflows/: e2e-pr.yml  release-on-tag.yml
config/: default.toml  production.toml
infra/: .env.example  Caddyfile  README.md  docker-compose.yml
infra/ansible/: inventory.example.ini  playbook.yml  setup.sh
infra/ansible/group_vars/: all.yml
infra/ansible/templates/: env.j2
infra/scripts/: kubo-init.sh
infra/systemd/: ipfs-relay.service
migrations/: 001_initial.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/ipfs/: mod.rs
src/middleware/: auth.rs  request_id.rs  tracing.rs
src/models/: mod.rs  upload.rs
src/pinning/: foureverland.rs  mod.rs  pinata.rs
src/routes/: health.rs  mod.rs  uploads.rs
src/storage/: db.rs  mod.rs
src/validation/: mod.rs  package.rs
tests/: upload_e2e.rs
